[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "geoloc"
version = "0.0.1"
authors = [
  { name="Dmitriy Chernoshey", email="dmitriych@yahoo.com" },
]
description = "A utility providing geolocation data based on Open Weather API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Limited License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
    "requests==2.31.0",
    "jsonschema==4.23.0",
    "asyncio==3.4.3",
    "pytest-asyncio==0.25.0"
]
